--- a/app/src/main/res/layout/kapper_card.xml
+++ b/app/src/main/res/layout/kapper_card.xml
@@ -2,15 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/mainLayout"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:id="@+id/mainLayout"
-	>
+	android:background="@color/mainFieldColor">
 
 	<androidx.cardview.widget.CardView
+		android:id="@+id/KapperCard"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="8dp"
+		android:layout_marginBottom="8dp"
+		android:background="@color/mainFieldColor"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
@@ -18,13 +20,14 @@
 
 		<androidx.constraintlayout.widget.ConstraintLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent">
+			android:layout_height="match_parent"
+			android:background="@color/mainBackgroundColor">
 
 			<ImageView
 				android:id="@+id/kapperImg"
 				android:layout_width="100dp"
 				android:layout_height="100dp"
-				android:contentDescription="@string/kapper_afbeelding"
+				android:contentDescription="@string/static_kapper_afbeelding"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
 				tools:srcCompat="@tools:sample/avatars" />
@@ -36,7 +39,8 @@
 				android:layout_marginStart="16dp"
 				android:layout_marginLeft="16dp"
 				android:layout_marginTop="4dp"
-				android:text="TextView"
+				android:text="@string/dynamic_kapperNaam"
+				android:textColor="@color/mainTextColor"
 				android:textSize="24sp"
 				android:textStyle="bold"
 				app:layout_constraintStart_toEndOf="@+id/kapperImg"
@@ -49,7 +53,8 @@
 				android:layout_marginStart="16dp"
 				android:layout_marginLeft="16dp"
 				android:layout_marginTop="4dp"
-				android:text="TextView"
+				android:text="@string/dynamic_slogan"
+				android:textColor="@color/mainTextColor"
 				android:textSize="16sp"
 				app:layout_constraintStart_toEndOf="@+id/kapperImg"
 				app:layout_constraintTop_toBottomOf="@+id/kapperNaam" />
@@ -113,6 +118,7 @@
 				android:layout_marginStart="16dp"
 				android:layout_marginLeft="16dp"
 				android:text="@string/kapperRating"
+				android:textColor="@color/mainTextColor"
 				app:layout_constraintBottom_toBottomOf="@+id/starOff2"
 				app:layout_constraintStart_toEndOf="@+id/starOff2"
 				app:layout_constraintTop_toTopOf="@+id/starOff2" />
