--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
 	<color name="colorPrimary">#6200EE</color>
 	<color name="colorPrimaryDark">#3700B3</color>
 	<color name="colorAccent">#03DAC5</color>
+
+	<color name="mainTextColor">#C1E8FF</color>
+	<color name="mainBackgroundColor">#0F3245</color>
+	<color name="mainFieldColor">#A92255</color>
 </resources>
